Fix missing `.php` in help tip link

--- a/include/i18n/en_US/help/tips/manage.pages.yaml
+++ b/include/i18n/en_US/help/tips/manage.pages.yaml
@@ -21,7 +21,7 @@ site_pages:
         configure them in the company settings and help topics.
     links:
       - title: Company Settings
-        href: /scp/settings?t=pages
+        href: /scp/settings.php?t=pages
 
 type:
     title: Type
