--- a/include/i18n/en_US/form.yaml
+++ b/include/i18n/en_US/form.yaml
@@ -198,3 +198,46 @@
       configuration:
         rows: 4
         cols: 40
+
+- type: S # notrans
+  title: Ticket Status Properties
+  instructions: Properties that can be set on a ticket status.
+  deletable: false
+  fields:
+    - type: choices # notrans
+      name: state # notrans
+      label: State
+      required: true
+      sort: 1
+      edit_mask: 63
+      configuration:
+        choices:|
+            open: Open
+            closed: Closed
+            archived: Archived
+            deleted: Deleted
+        prompt: State of a ticket
+    - type: choices # notrans
+      name: flags # notrans
+      label: Flags
+      required: false
+      sort: 2
+      edit_mask: 63
+      configuration:
+        choices:|
+            onhold: Onhold (Disable SLA)
+            overdue: Mark as Overdue
+            answered: Mark as Answered
+        prompt: Status flags
+        multiselect: true
+    - type: memo # notrans
+      name: description
+      label: Description
+      required: false
+      sort: 3
+      edit_mask: 15
+      configuration:
+        rows: 2
+        cols: 40
+        html: false
+        length: 100
