i18n: Allow multiple translations of "Open"
The software defines at least three contexts for the phrase "Open"

  * The name of a ticket queue (Open tickets)
  * A status of a ticket (Open / Closed)
  * An action to be performed (Open a ticket)

References:
(Crowdin login required)
http://i18n.osticket.com/translate/osticket-official/148/enus-de#2915

--- a/setup/doc/i18n.md
+++ b/setup/doc/i18n.md
@@ -44,13 +44,18 @@ Use a few function calls to get your text localized:
   * `_N('string', 'strings', n)` localize a string with plural alternatives
     to the current user locale preference.
   * `_S('string')` localize the string to the system primary language
-  * `_SN('string', 'strings', n)` localize a string with plural alternatives
+  * `_NS('string', 'strings', n)` localize a string with plural alternatives
     to the system primary language.
   * `_L('string', locale)` localize a string to a named locale. This is
     useful in a ticket thread, for instance, which may have a language
     preference separate from both the user and the system primary language
-  * `_LN('string', 'strings', n, locale)` localize a string with plural
+  * `_NL('string', 'strings', n, locale)` localize a string with plural
     alternatives to a specific locale.
+  * `_P('context', 'string')` localize a string which may have the same
+    source text as another string but have a different context or usage. An
+    example would be `open` used as a noun, adjective, and verb.
+  * `_NP('context', 'string', 'strings', n)` localize a string with plural
+    alternatives which may have different contexts in the source language.
 
 In some cases, it is not possible to use a function to translate your
 string. For instance, if it is used a as a class constant or default value
@@ -69,6 +74,11 @@ set something like this up:
 In this case the localized version of the class variable is translated when
 it is used — not when it is defined.
 
+The `* trans *` text in comment is significant. Both the asterisks and the
+term `trans` are used to signify that the phrase should be made
+translatable. The comment must also be placed immedately before or after the
+string without any other PHP symbols in between (like the semi-colon).
+
 ### Adding context to your strings
 
 Your text may be ambiguous or unclear when it is viewed outside the context
@@ -79,6 +89,21 @@ in the translation template. For instance
 
 ```php
     print __('Localized' /* These comments are exported */);
+```
+
+All types of PHP comments are supported. They must be placed inside the
+parentheses of the localization call. If using single-line comments, use
+multiple lines if necessary to define the call so that your single-line
+comments can be used. For instance:
+
+```php
+    print sprintf(__(
+        // Tokens will be <a> of <b> <object(s)>
+        '%1$d of %2$d %3$s'
+        ),
+        $a, $b,
+        _N('object', 'objects', $b)
+    );
 ```
 
 ### Building POT file for translations
