Implement concept of custom ticket numbers
Ticket numbers are now configurable as a system-default and by help topic.
Previously, an administrator could select between six-digit random and
sequential numbers. Now, the sequence is selectable so multiple sequences
as needed, and a format can be specified to define how the ticket numbers
look. Formats can also be defined for each help topic.

--- a/include/i18n/en_US/help/tips/settings.ticket.yaml
+++ b/include/i18n/en_US/help/tips/settings.ticket.yaml
@@ -13,6 +13,23 @@
 # must match the HTML #ids put into the page template.
 #
 ---
+number_format:
+    title: Ticket Number Format
+    content: >
+        This setting is used to create numbers for new tickets. Use hash
+        signs (`#`) where numbers are to be replaced. For example, for
+        six-digit numbers, use <code>######</code>. Any other text in the
+        number format will be preserved. Number formats can be overridden by
+        each help topic.
+
+sequence_id:
+    title: Ticket Number Sequence
+    content:
+        Choose a sequence from which to derive new ticket numbers. The
+        system has a incrementing sequence and a random sequence by default.
+        You may create as many sequences as you wish. Use various sequences
+        in the number format configuration for help topics.
+
 default_sla:
     title: Default SLA
     content: >
