Changes added to allow users to specify a random letter in a ticket's number.  Responses to these tickets also work.

--- a/include/i18n/en_US/help/tips/settings.ticket.yaml
+++ b/include/i18n/en_US/help/tips/settings.ticket.yaml
@@ -22,6 +22,8 @@ number_format:
         Topics</span> can define custom number formats.
         <br/><br/>
         For example, for six-digit numbers, use <code>######</code>.
+        <br/>
+        For example, for six-digit numbers followed by a letter, use <code>######@</code>.
 
 sequence_id:
     title: Ticket Number Sequence
